--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             });
     };
 
-    const socket = new WebSocket('ws://localhost:8080/ws');
+    const socket = new WebSocket(window.location.href.replace('http', 'ws') + 'ws');
 
     socket.onmessage = (event) => {
         console.log(`frame received: ${event.data.size}`);
