--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
         // videoSourceBuffer = mediaSource.addSourceBuffer('video/mp4; codecs="avc1.4d002a"');
         videoSourceBuffer = mediaSource.addSourceBuffer('video/webm; codecs=vp9');
     }, false);
-    mediaSource.addEventListener('sourceended', function (e) {
+    mediaSource.addEventListener('sourceended', function () {
         console.warn('MediaSource ended');
     }, false);
-    mediaSource.addEventListener('sourceclosed', function (e) {
+    mediaSource.addEventListener('sourceclosed', function () {
         console.warn('MediaSource closed');
     }, false);
 
@@ -81,6 +81,7 @@
             })
             .catch((err) => {
                 if (err) console.error(err);
+                else console.error('Unknown error')
             });
     };
 
